Done Thumbnail and nextPrevArrows

--- a/index.html
+++ b/index.html
@@ -21,13 +21,48 @@
         <div class="slider__list">
             <div class="slider__item">
                 <img src="./assets/imgs/img1.jpg" alt="" class="slider__item--img">
+                <div class="slider__item--content">
+                    <div class="slider__item--title">MAGIC SLIDER</div>
+                    <svg max-width="80%" height="60px" class="slider__item--type">
+                        <defs>
+                          <linearGradient id="gradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                            <stop offset="0%" style="stop-color:#00f7ff;stop-opacity:1" />
+                            <stop offset="100%" style="stop-color:#0055ff;stop-opacity:1" />
+                          </linearGradient>
+                        </defs>
+                        <text x="0" y="100%" fill="url(#gradient)" font-family="Arial">
+                            FLOWERS
+                        </text>
+                    </svg>
+                    <div class="slider__item--description">
+                        Flowers are vibrant, natural beauties that come in various colors, shapes, and sizes. 
+                        They symbolize emotions like love, joy, and hope.
+                        Each type of flower has its unique meaning, making them perfect for expressing feelings.
+                        Flowers also add elegance and charm to any environment.
+                    </div>
+                    <div class="slider__item--button">
+                        <button>SEE MORE</button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="slider__thumbnail">
-
+            <div class="slider__thumbnail--item">
+                <img src="./assets/imgs/img1.jpg" alt="" class="slider__thumbnail--img">
+            </div>
+            <div class="slider__thumbnail--item">
+                <img src="./assets/imgs/img2.jpg" alt="" class="slider__thumbnail--img">
+            </div>
+            <div class="slider__thumbnail--item">
+                <img src="./assets/imgs/img3.jpg" alt="" class="slider__thumbnail--img">
+            </div>
+            <div class="slider__thumbnail--item">
+                <img src="./assets/imgs/img4.jpg" alt="" class="slider__thumbnail--img">
+            </div>
         </div>
         <div class="slider__nextPrevArrows">
-
+            <button class="slider__nextPrevArrows--prev"><</button>
+            <button class="slider__nextPrevArrows--next">></button>
         </div>
     </div>
 </body>
