--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image_Slider_Carousel</title>
     <!-- link css -->
-    <link rel="stylesheet" href="./assets/css/style.css">    
-</head>
+    <link rel="stylesheet" href="./assets/css/style.css"> 
+    <link rel="stylesheet" href="./assets/css/reponsive.css">  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap&subnet=vietnamese">
 <body>
     <header>
+        <input type="checkbox" id="check--navbar">
+        <label for="check--navbar">
+            <i class="fa-solid fa-bars header__icon--navbar"></i>
+        </label>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
+            <div class="header__links">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Portfolio</a>
+                <a href="#">Services</a>
+                <a href="#">Contact</a>
+            </div>
         </nav>
     </header>
     <div class="slider">
@@ -66,4 +74,5 @@
         </div>
     </div>
 </body>
+<script src="./js/app.js"></script>
 </html>
